include $(top_srcdir)/Makefile_web.am_fragment

figuresdir = $(clutter_docdir)/tutorial/figures

figures_DATA = actors.png actor_events.png actor_transformations.png \
               behaviours.png custom_actor.png effects.png stage.png \
               stage_widget.png timeline.png

EXTRA_DIST = $(figures_DATA)

	       
